; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_rpc_generic.c_freenetbuf.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_rpc_generic.c_freenetbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netbuf = type { %struct.netbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @freenetbuf(%struct.netbuf* %0) #0 {
  %2 = alloca %struct.netbuf*, align 8
  store %struct.netbuf* %0, %struct.netbuf** %2, align 8
  %3 = load %struct.netbuf*, %struct.netbuf** %2, align 8
  %4 = icmp ne %struct.netbuf* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.netbuf*, %struct.netbuf** %2, align 8
  %7 = getelementptr inbounds %struct.netbuf, %struct.netbuf* %6, i32 0, i32 0
  %8 = load %struct.netbuf*, %struct.netbuf** %7, align 8
  %9 = call i32 @free(%struct.netbuf* %8)
  %10 = load %struct.netbuf*, %struct.netbuf** %2, align 8
  %11 = call i32 @free(%struct.netbuf* %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @free(%struct.netbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
